@@ -1,5 +1,8 @@
 [b]Version 0.5.61[/b] (not released yet):
 
+(2007-10-06)
+ * Updated the Polish translation.
+
 (2007-10-05)
  * Now the icon for Windows (smplayer.ico) is bigger (48x48).
  * Updated the Chinese (zh_CN) translation.
